Added CreateUser endpoint to api spec, handler. Added FireAuth store to app.
